syntax = "proto3";

option csharp_namespace = "Sisa.Blog.Api.V1.Files.Commands";

package sisa.blog.api.v1.files.commands;

import "google/protobuf/wrappers.proto";

message FileInfoParams {
  reserved 1;
  reserved "id";

  string name = 2; // original file name
  string type = 3; // mime type
  int64 size = 4; // file size in bytes
  google.protobuf.StringValue title = 5;
  google.protobuf.StringValue description = 6;
  map<string, string> tags = 7;
}

message UploadFileCommand {
  oneof file {
    FileInfoParams info = 1;
    bytes content = 2;
  }
}

message UpdateFileInfoCommand {
  // data fields: from 1 to 50
  reserved 2;

  string id = 1;
  google.protobuf.StringValue title = 3;
  google.protobuf.StringValue description = 4;
  map<string, string> tags = 5;
}

message DeleteFileCommand {
  string id = 1;
}
