syntax = "proto3";

option csharp_namespace = "Sisa.Blog.Api.V1.Files.Queries";

package sisa.blog.api.v1.files.queries;

import "sisa/libs/common/params/filtering_params.proto";
import "sisa/libs/common/params/sorting_params.proto";
import "sisa/libs/common/params/paging_params.proto";

message FindFileByIdQuery {
  string id = 1;
}

message GetFilesQuery {
  sisa.common.params.FilteringParams filter = 1;
  sisa.common.params.SortingParams sortBy = 2;
  sisa.common.params.PagingParams paging = 3;
}
